# pyforecast

./: .gitignore  PyForecast.spec  README.md  pivot_app.py  pyproject.toml
.github/workflows/: ci.yaml  release-windows.yaml
src/pyforecast/: main.py
src/pyforecast/application/: __init__.py
src/pyforecast/application/services/: __init__.py  config_service.py  forecast_service.py  ingest_service.py  key_service.py  profiling_service.py  transform_service.py
src/pyforecast/domain/: __init__.py  canonical_schema.py  errors.py  timefreq.py
src/pyforecast/infrastructure/: __init__.py  logging.py
src/pyforecast/ui/: __init__.py  main_window.py  workers.py
src/pyforecast/ui/widgets/: __init__.py  column_mapper.py  file_picker.py  forecast_prompt.py  key_builder.py  preview_table.py
tests/: test_profiling_wide_headers_frequency.py  test_timefreq.py  test_transform_wide_headers_to_long.py
